--- a/portfolio/src/pages/Skills.module.css
+++ b/portfolio/src/pages/Skills.module.css
@@ -1,8 +1,10 @@
 .skills {
   text-align: center;
-  padding: 60px 20px;
-  background: linear-gradient(135deg, #00000000, #222222);
+  padding: 100px 20px;
+  background: transparent; /* Starts from #222 */
   color: white;
+  position: relative;
+  z-index: 5;
 }
 
 h2 {
@@ -75,7 +77,7 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Send to back */
+  z-index: -1; /* Send behind everything */
 }
 
 /* Responsive Design */
