--- a/portfolio/src/pages/Resume.module.css
+++ b/portfolio/src/pages/Resume.module.css
@@ -91,7 +91,7 @@
     }
   
     .resumeViewer {
-      height: 65vh;
+      height: 60vh;
     }
   }
   
@@ -99,6 +99,10 @@
     .downloadBtn {
       padding: 12px 16px;
       font-size: 0.9rem;
+    }
+
+    .resumeViewer{
+        height: 50vh;
     }
   }
   
